--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -11,19 +11,21 @@ jobs:
 
     steps:
     - name: Checkout source
-      uses: actions/checkout@v4
+      uses: actions/checkout@v5
 
     - name: Setup MSBuild
-      uses: microsoft/setup-msbuild@v1.3.1
+      uses: microsoft/setup-msbuild@v2.0.0
 
     - name: Setup NuGet
       uses: NuGet/setup-nuget@v2
 
-    - name: Restore packages
-      run: nuget restore PxWeb.sln
+    - name: Restore packages new
+      run: nuget restore 
 
-    - name: Build solution (Release)
-      run: msbuild PxWeb.sln /p:Configuration=Release /m
+    - name: Build the application
+      run: msbuild /p:Configuration=$env:Configuration
+      env:
+        Configuration: ${{ matrix.configuration }}
 
     - name: Prepare deploy folder
       shell: pwsh
