--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -23,13 +23,14 @@ jobs:
       run: nuget restore 
 
     - name: Build the application
-      run: msbuild /p:Configuration=Release   
+      run: msbuild /p:Configuration=Release /p:PublishDir=publish_output
 
     - name: Print current folder path with PowerShell
       shell: pwsh
       run: |
           Write-Output "Current folder path is: $PWD"
           Write-Output "Or using Get-Location: $(Get-Location)"
+          get-childitem publish_output
     
     - name: Prepare deploy folder
       shell: pwsh
@@ -50,7 +51,8 @@ jobs:
       shell: pwsh
       run: |
         #Compress-Archive -Path "deploy\*" -DestinationPath "PxWeb_Release.zip"
-        Compress-Archive -Path "PxWeb.Test\bin\Release\*" -DestinationPath "PxWeb_Release.zip"
+        #Compress-Archive -Path "PxWeb.Test\bin\Release\*" -DestinationPath "PxWeb_Release.zip"
+        Compress-Archive -Path "publish_output/*" -DestinationPath "PxWeb_Release.zip"
 
     - name: Upload artifact
       uses: actions/upload-artifact@v4
