--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -41,21 +41,22 @@ jobs:
         New-Item -ItemType Directory -Force -Path deploy
         # Copy web root contents (adjust if project path differs)
         # Assuming main web project folder is PxWeb
-        Copy-Item -Path "PxWeb.Test\*" -Destination "deploy" -Recurse -Force
+        #Copy-Item -Path "PxWeb.Test\*" -Destination "deploy" -Recurse -Force
         # Ensure bin contains Release outputs
-        Remove-Item -Path "deploy\bin" -Recurse -Force -ErrorAction Ignore
-        New-Item -ItemType Directory -Force -Path "deploy\bin"
-        Copy-Item -Path "PxWeb.Test\bin\Release\*" -Destination "deploy\bin" -Recurse -Force
+        #Remove-Item -Path "deploy\bin" -Recurse -Force -ErrorAction Ignore
+        #New-Item -ItemType Directory -Force -Path "deploy\bin"
+        #Copy-Item -Path "PxWeb.Test\bin\Release\*" -Destination "deploy\bin" -Recurse -Force
         # Optional: remove local dev files not needed in deployment
-        Remove-Item -Path "deploy\.vs","deploy\.gitignore" -Recurse -Force -ErrorAction Ignore
+        #Remove-Item -Path "deploy\.vs","deploy\.gitignore" -Recurse -Force -ErrorAction Ignore
 
     - name: Zip deployable package
       shell: pwsh
       run: |
         #Compress-Archive -Path "deploy\*" -DestinationPath "PxWeb_Release.zip"
-        Compress-Archive -Path "PxWeb.Test\*" -DestinationPath "PxWeb_Release.zip"
+        #Compress-Archive -Path "PxWeb.Test\*" -DestinationPath "PxWeb_Release.zip"
         #Compress-Archive -Path "PxWeb.Test\bin\Release\*" -DestinationPath "PxWeb_Release.zip"
         #Compress-Archive -Path "publish_output/*" -DestinationPath "PxWeb_Release.zip"
+        Compress-Archive -Path "artefacts\*" -DestinationPath "PxWeb_Release.zip"
 
     - name: Upload artifact
       uses: actions/upload-artifact@v4
