--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -11,7 +11,10 @@ jobs:
     
     steps:
     - name: Checkout source
-      uses: actions/checkout@v5
+      uses: actions/checkout@v5        
+      with:
+        ref: "2025.v1"
+        submodules: true        
 
     - name: Setup MSBuild
       uses: microsoft/setup-msbuild@v2.0.0
